# model/user.go
@@ -1,7 +1,6 @@
 package model
 
 import (
-	"database/sql"
 	"go-one-server/util/errno"
 	"gorm.io/gorm"
 )
@@ -9,12 +8,10 @@ import (
 // User 用户
 type User struct {
 	Model
-	Username string         `json:"username" gorm:"size:20;not null;unique;comment:用户名"`
-	Password string         `json:"-"  gorm:"type:char(32);not null;comment:登录密码"`
-	Salt     string         `json:"-" gorm:"type:char(12);not null;comment:混淆盐"`
-	Remark   string         `json:"remark" gorm:"comment:备注"`
-	RoleID   sql.NullString `json:"role_id" gorm:"null;type:varchar(32);comment:用户角色ID"`
-	Role     Role           `json:"role" gorm:"foreignKey:RoleID;references:RoleID"`
+	Username string `json:"username" gorm:"size:20;not null;unique;comment:用户名"`
+	Password string `json:"-"  gorm:"type:char(32);not null;comment:登录密码"`
+	Salt     string `json:"-" gorm:"type:char(12);not null;comment:混淆盐"`
+	Remark   string `json:"remark" gorm:"comment:备注"`
 }
 
 // 创建钩子 https://gorm.io/zh_CN/docs/hooks.html
@@ -26,12 +23,6 @@ func (u *User) BeforeCreate(tx *gorm.DB) error {
 	if count > 0 {
 		return errno.ErrUserExisting
 	}
-	if u.RoleID.Valid {
-		tx.Model(&Role{}).Where("role_id = ?", u.RoleID).Count(&count)
-		if count < 1 {
-			return errno.ErrRoleNotFound
-		}
-	}
 	return nil
 }
 
@@ -42,7 +33,7 @@ func (u *User) Create() error {
 // 根据username查询记录
 func FindUser(username string) (*User, error) {
 	var user User
-	if err := db.Where(map[string]interface{}{"username": username}).Joins("Role").
+	if err := db.Where(map[string]interface{}{"username": username}).
 		Take(&user).Error; err != nil {
 		if err == gorm.ErrRecordNotFound {
 			return nil, errno.ErrUserNotFound
